<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="score_text">Score: %1$d of %2$d</string>
    <string name="cheat_text">Cheated: %1$d of 3</string>

    <string name="question_holland">Holland is the capital of The Netherlands.</string>
    <string name="question_oceans">The pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indoan Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Eqypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deppest freshwater lake.</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect :(</string>
    <string name="judgement_toast">Cheating is wrong.</string>
    <string name="cheat_max_toast">You have cheated 3 times.</string>

    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure want to do this?</string>
    <string name="show_answer_button">Show Answer</string>

    <string name="finish_text">You\'ve answered all the questions</string>
    <string name="api_level_text">API Level %1$d</string>
</resources>
